Зроблено начальнbй макет

--- a/econom-tour-2021/index.html
+++ b/econom-tour-2021/index.html
@@ -1,12 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    
+    <header>
+        <h1>ЕКОНОМ ТУР 2021</h1>
+    </header>
+    <article>
+        <header>
+            <h2>Новина 1</h2>
+        </header>
+        <section>
+            <p>Reprehenderit commodo Lorem anim nostrud laborum ex voluptate id irure ex ea. Eiusmod quis aute veniam ipsum culpa enim id. Quis aliquip elit do do ad nostrud anim excepteur sint velit non esse. Excepteur eiusmod aliquip est mollit. Commodo
+                incididunt ut ipsum cillum ad.</p>
+            <p> mollit quis culpa sint aliquip proident. Minim ex consequat adipisicing officia nostrud sint anim. Et cupidatat non excepteur est veniam fugiat. Cillum amet tempor aliquip velit.</p>
+            <p>Pariatur amet Lorem amet elit. Occaecat eiusmod et minim dolore ea pariatur id aliqua nisi eiusmod non magna. Adipisicing ullamco reprehenderit consequat pariatur. Eiusmod excepteur tempor incididunt proident in Lorem voluptate adipisicing
+                ea nulla. Occaecat minim aute enim culpa exercitation laboris ipsum adipisicing. Aliqua nulla excepteur nostrud deserunt deserunt consequat sit minim cupidatat dolore fugiat officia. Amet excepteur nulla laborum voluptate consequat nostrud
+                aliquip ullamco aliqua sit eiusmod occaecat cupidatat.</p>
+
+        </section>
+        <header>
+            <h2>Новина 2</h2>
+        </header>
+        <section>
+            <p>Minim do ea magna aliquip ut reprehenderit. Irure non mollit nulla ut ex excepteur esse do ea sit laboris pariatur. Labore qui minim id excepteur velit aliqua aliqua laboris proident tempor elit anim incididunt laboris. Lorem non ullamco culpa
+                eiusmod aliquip qui in irure. Consequat eiusmod sunt qui sit elit nisi exercitation mollit nisi. Pariatur laborum dolor adipisicing nulla quis in proident labore nulla et in do minim. Aliqua deserunt sit nisi dolor cillum.</p>
+            <p>Minim nisi sint occaecat incididunt aliqua deserunt quis adipisicing pariatur. Cupidatat ullamco Lorem ad sunt cupidatat reprehenderit voluptate proident consequat. Consectetur velit dolor dolor Lorem officia nostrud mollit ut ut voluptate
+                incididunt. Dolore cupidatat duis ipsum sint consectetur veniam. In excepteur occaecat cupidatat commodo. Irure magna incididunt aliqua ex in in excepteur ipsum ipsum id. Culpa consequat ad in eiusmod esse ullamco adipisicing nulla occaecat
+                magna aute exercitation minim.</p>
+
+        </section>
+        <header>
+            <h2>Новина 3</h2>
+        </header>
+        <section>
+            <p>Nostrud labore sint duis minim mollit occaecat laborum nisi eu. Qui minim cupidatat anim proident fugiat sit pariatur mollit. Consectetur deserunt dolore commodo in dolore. Eu deserunt id labore labore ipsum ea. Aliqua veniam ullamco amet
+                quis culpa in Lorem cupidatat aliqua Lorem ipsum. Elit enim aute sit veniam. Irure mollit aute irure ipsum do sint mollit ea.</p>
+        </section>
+        <header>
+            <h2>Новина 4</h2>
+        </header>
+        <section>
+            <p>Excepteur irure aliqua in non. Sint fugiat anim ut ipsum. Voluptate dolor adipisicing fugiat enim dolor amet veniam in incididunt deserunt sunt. Sint laborum est irure est minim deserunt Lorem commodo ex. Tempor ullamco ea tempor elit nostrud
+                dolor velit irure magna tempor nulla occaecat aliqua. Nisi Lorem adipisicing laboris nulla laboris tempor. Enim cillum aute ea aute elit do non esse ad.</p>
+            <p>Incididunt quis nisi ut esse labore. Excepteur enim cupidatat non velit nulla ullamco laboris. Dolore incididunt aliquip ea anim veniam.</p>
+            <p>
+                Elit laborum sint do minim eiusmod nulla dolore. Laboris sunt esse proident consequat ut mollit sit nulla mollit. Ullamco exercitation Lorem aliqua eiusmod aliqua pariatur.
+            </p>
+            <p>Magna anim reprehenderit velit officia. Velit culpa ipsum do esse nisi do eiusmod fugiat officia et. Et exercitation velit aliqua laboris pariatur enim in cupidatat anim fugiat fugiat velit. Amet officia cillum laborum sit.</p>
+        </section>
+        <header>
+            <h2>Новина 5</h2>
+        </header>
+        <section>
+            <p>Quis qui laboris magna esse minim ipsum incididunt fugiat sint officia aliqua reprehenderit non labore. Aute ut amet cupidatat do incididunt sint laborum. Labore nulla veniam consectetur ex fugiat et elit dolor reprehenderit. Esse amet eu
+                ex incididunt quis ad cupidatat sunt.</p>
+        </section>
+    </article>
 </body>
+
 </html>
