--- a/econom-tour-2021/index.html
+++ b/econom-tour-2021/index.html
@@ -6,17 +6,88 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles/main.css">
 </head>
 
 <body>
-    <header>
+    <header id="mainheader">
         <h1>ЕКОНОМ ТУР 2021</h1>
     </header>
-    <article>
-        <header>
-            <h2>Новина 1</h2>
-        </header>
+    <nav id="nav" link="black">
+        <article>
+            <h3>Страници стран:</h3>
+            <ul type="disc" id="nav-color">
+                <li><a href="argentina.html">Аргентина</a></li>
+                <li><a href="bulgaria.html">Болгария</a></li>
+                <li><a href="britany.html">Великобритания</a></li>
+                <li><a href="germany.html">Германия</a></li>
+                <li><a href="greece.html">Греция</a></li>
+                <li><a href="denmark.html">Дания</a></li>
+                <li><a href="egypt2.html">Египет</a></li>
+                <li><a href="italy.html">Италия</a></li>
+                <li><a href="canada.html">Канада</a></li>
+                <li><a href="norway.html">Норвегия</a></li>
+                <li><a href="usa.html">США</a></li>
+                <li><a href="france.html">Франция</a></li>
+                <li><a href="japan.html">Япония</a></li>
+            </ul>
+        </article>
+        <article>
+            <h3>Контакты:</h3>
+            <table>
+                <tr>
+                    <th>E-mail:</th>
+                    <td> Economtour2021@gmail.com</td>
+                </tr>
+                <tr>
+                    <th>Тел.:</th>
+                    <td>+380986541359</td>
+                </tr>
+                <tr>
+                    <th>Адрес:</th>
+                    <td>м.Кам'янець-Подільський, вул.Огієнка 82</td>
+                </tr>
+            </table>
+        </article>
+        <article id="formoftour">
+            <div id="request">Заявка на тур</div>
+            <div id="dopinfo">Заполните форму, что бы мы могли отправить вам СМС с заявкой на тур</div>
+            <div>
+                <form id="form">
+
+                    <input name="firstName" type="text" required="required" placeholder="Ваше ФИО*" />
+                    <input name="phone" type="tel" required="required" placeholder="Телефон">
+                    <input name="emailAddress" type="email" required="required" placeholder="Е-mail" />
+                    <select required>
+                            <option>Аргентина</option>          
+                            <option>Болгария</option>
+                            <option>Великобритания</option>
+                            <option>Германия</option>
+                            <option>Греция</option>
+                            <option>Дания</option>
+                            <option>Египет</option>
+                            <option>Италия</option>
+                            <option>Канада</option>
+                            <option>Норвегия</option>
+                            <option>США</option>
+                            <option>Франция</option>
+                            <option>Япония</option>
+                            <option selected disabled hidden>Выберете страну</option>
+                    </select>
+                    <div>
+                        <button type="submit">Отправить</button>
+                    </div>
+                </form>
+
+            </div>
+        </article>
+    </nav>
+    <article class="inform">
         <section>
+            <header>
+                <h2>Новость 1</h2>
+            </header>
+
             <p>Reprehenderit commodo Lorem anim nostrud laborum ex voluptate id irure ex ea. Eiusmod quis aute veniam ipsum culpa enim id. Quis aliquip elit do do ad nostrud anim excepteur sint velit non esse. Excepteur eiusmod aliquip est mollit. Commodo
                 incididunt ut ipsum cillum ad.</p>
             <p> mollit quis culpa sint aliquip proident. Minim ex consequat adipisicing officia nostrud sint anim. Et cupidatat non excepteur est veniam fugiat. Cillum amet tempor aliquip velit.</p>
@@ -25,10 +96,11 @@
                 aliquip ullamco aliqua sit eiusmod occaecat cupidatat.</p>
 
         </section>
-        <header>
-            <h2>Новина 2</h2>
-        </header>
         <section>
+            <header>
+                <h2>Новость 2</h2>
+            </header>
+
             <p>Minim do ea magna aliquip ut reprehenderit. Irure non mollit nulla ut ex excepteur esse do ea sit laboris pariatur. Labore qui minim id excepteur velit aliqua aliqua laboris proident tempor elit anim incididunt laboris. Lorem non ullamco culpa
                 eiusmod aliquip qui in irure. Consequat eiusmod sunt qui sit elit nisi exercitation mollit nisi. Pariatur laborum dolor adipisicing nulla quis in proident labore nulla et in do minim. Aliqua deserunt sit nisi dolor cillum.</p>
             <p>Minim nisi sint occaecat incididunt aliqua deserunt quis adipisicing pariatur. Cupidatat ullamco Lorem ad sunt cupidatat reprehenderit voluptate proident consequat. Consectetur velit dolor dolor Lorem officia nostrud mollit ut ut voluptate
@@ -36,17 +108,19 @@
                 magna aute exercitation minim.</p>
 
         </section>
-        <header>
-            <h2>Новина 3</h2>
-        </header>
         <section>
+            <header>
+                <h2>Новость 3</h2>
+            </header>
+
             <p>Nostrud labore sint duis minim mollit occaecat laborum nisi eu. Qui minim cupidatat anim proident fugiat sit pariatur mollit. Consectetur deserunt dolore commodo in dolore. Eu deserunt id labore labore ipsum ea. Aliqua veniam ullamco amet
                 quis culpa in Lorem cupidatat aliqua Lorem ipsum. Elit enim aute sit veniam. Irure mollit aute irure ipsum do sint mollit ea.</p>
         </section>
-        <header>
-            <h2>Новина 4</h2>
-        </header>
         <section>
+            <header>
+                <h2>Новость 4</h2>
+            </header>
+
             <p>Excepteur irure aliqua in non. Sint fugiat anim ut ipsum. Voluptate dolor adipisicing fugiat enim dolor amet veniam in incididunt deserunt sunt. Sint laborum est irure est minim deserunt Lorem commodo ex. Tempor ullamco ea tempor elit nostrud
                 dolor velit irure magna tempor nulla occaecat aliqua. Nisi Lorem adipisicing laboris nulla laboris tempor. Enim cillum aute ea aute elit do non esse ad.</p>
             <p>Incididunt quis nisi ut esse labore. Excepteur enim cupidatat non velit nulla ullamco laboris. Dolore incididunt aliquip ea anim veniam.</p>
@@ -55,14 +129,48 @@
             </p>
             <p>Magna anim reprehenderit velit officia. Velit culpa ipsum do esse nisi do eiusmod fugiat officia et. Et exercitation velit aliqua laboris pariatur enim in cupidatat anim fugiat fugiat velit. Amet officia cillum laborum sit.</p>
         </section>
-        <header>
-            <h2>Новина 5</h2>
-        </header>
         <section>
+            <header>
+                <h2>Новость 5</h2>
+            </header>
             <p>Quis qui laboris magna esse minim ipsum incididunt fugiat sint officia aliqua reprehenderit non labore. Aute ut amet cupidatat do incididunt sint laborum. Labore nulla veniam consectetur ex fugiat et elit dolor reprehenderit. Esse amet eu
                 ex incididunt quis ad cupidatat sunt.</p>
         </section>
+
     </article>
+
+    <link type="text/css" rel="stylesheet" href="https://www.meteoprog.ua/css/winformer.min.css?id=100">
+
+    <div class="meteoprog-informer" style="width: 270px" data-params='{"city_ids":"2533,2650,2696","domain":"https://www.meteoprog.ua","id":"6086758c2bac921c528b458b","lang":"ru"}'>
+
+
+        <a title="Погода в городе Киев" target="_blank" href="https://www.meteoprog.ua/weather/Kyiv">
+            <img style="margin: 0 auto; display: block" src="https://www.meteoprog.ua/images/preloader.gif" alt="Loading...">
+        </a>
+        <a target="_blank" class="constructor__met2wlink" href="https://www.meteoprog.ua/review/Kyiv/">Погода на 2 недели</a>
+
+        <a title="Погода в городе Львов" target="_blank" href="https://www.meteoprog.ua/weather/Lviv">
+            <img style="margin: 0 auto; display: block" src="https://www.meteoprog.ua/images/preloader.gif" alt="Loading...">
+        </a>
+        <a target="_blank" class="constructor__met2wlink" href="https://www.meteoprog.ua/review/Lviv/">Погода на 2 недели</a>
+
+        <a title="Погода в городе Одесса" target="_blank" href="https://www.meteoprog.ua/weather/Odesa">
+            <img style="margin: 0 auto; display: block" src="https://www.meteoprog.ua/images/preloader.gif" alt="Loading...">
+        </a>
+        <a target="_blank" class="constructor__met2wlink" href="https://www.meteoprog.ua/review/Odesa/">Погода на 2 недели</a>
+
+
+        <a class="constructor__metlink" target="_blank" href="https://www.meteoprog.ua">
+            <img style="display: block; margin: 0 auto;" alt="Meteoprog" src="https://www.meteoprog.ua/images/meteoprog-inf.png">
+        </a>
+    </div>
+    <script type="text/javascript" src="https://www.meteoprog.ua/js/winformer.min.js?id=100"></script>
+    <footer>
+        <p class="text-center">Copyright © Econom Tour 2021! Всe права захищены</p>
+    </footer>
+
+
+
 </body>
 
 </html>
