--- a/econom-tour-2021/countries.html
+++ b/econom-tour-2021/countries.html
@@ -70,7 +70,7 @@
                         Аргентина
                     </div>
                     <div class="capital">Буенос-Айрес</div>
-                    <a href="/argentina">
+                    <a href="argentina.html">
                         <img class="flag" src="https://lipis.github.io/flag-icon-css/flags/4x3/ar.svg " alt="Флаг Аргентины">
                     </a>
                 </div>
