--- a/econom-tour-2021/britany.html
+++ b/econom-tour-2021/britany.html
@@ -174,7 +174,9 @@
         наци­ональные чувства ка­толиков демонстратив­ным празднованием своей победы в битве на реке Бойн (1690 г.). В 1969 г. конфликт обострился до такой степени, что автоно­мия провинции была упразднена (1972 г.), а на территорию Север­ной Ирландии
         всту­пили британские вой­ска. В апреле 1998 г. стороны конфликта подписали пе­ремирие, позволяющее надеяться на урегулирование многолетнего противостояния и нормализацию политической ситуации.
     </div>
-
+    <footer>
+        <p class="text-center">Copyright © Econom Tour 2021! Всe права захищены</p>
+    </footer>
 </body>
 
 </html>
