--- a/econom-tour-2021/bulgaria.html
+++ b/econom-tour-2021/bulgaria.html
@@ -180,7 +180,7 @@
         </table>
     </aside>
     <footer>
-        <hr size="3px" color="#444"> &#169KP Econom Tour 2011-2021<br> вул. Огієнка, 82, Кам'янець-Подільський<br> тел.: +380989976546
+        <p class="text-center">Copyright © Econom Tour 2021! Всe права захищены</p>
     </footer>
 </body>
 
