--- a/econom-tour-2021/countries.html
+++ b/econom-tour-2021/countries.html
@@ -174,10 +174,8 @@
             </div>
         </div>
     </section>
-    <footer class="py-3 bg-light">
-        <div class="container">
-            <p class="text-center">Copyright &copy; Super Tourist Company 2019</p>
-        </div>
+    <footer>
+        <p class="text-center">Copyright © Econom Tour 2021! Всe права захищены</p>
     </footer>
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
