--- a/econom-tour-2021/usa.html
+++ b/econom-tour-2021/usa.html
@@ -286,7 +286,7 @@
     </aside>
 </body>
 <footer>
-    &copy; Econom-tour-2021
+    <p class="text-center">Copyright © Econom Tour 2021! Всe права захищены</p>
 </footer>
 
 </html>
