--- a/econom-tour-2021/canada.html
+++ b/econom-tour-2021/canada.html
@@ -228,6 +228,9 @@
             </div>
         </section>
     </article>
+    <footer>
+        <p class="text-center">Copyright © Econom Tour 2021! Всe права захищены</p>
+    </footer>
 </body>
 
 </html>
