--- a/econom-tour-2021/denmark.html
+++ b/econom-tour-2021/denmark.html
@@ -10,15 +10,15 @@
 </head>
 
 <body>
-   <p align="center"> <img style="height: 300px; float: centr;" src="images/denmark/denmarkflag.jpg" alt="photo"></p>
-   
-   
+    <p align="center"> <img style="height: 300px; float: centr;" src="images/denmark/denmarkflag.jpg" alt="photo"></p>
+
+
     <h1 align="center"> Дания </h1>
 
     <h2>
         Denmark. Страна является яркой декорацией к сказкам Ганса Христиана Андерсена - все здесь мило, уютно и аккуратно как в вымышленном королевстве.
     </h2>
-    <table align="center"; >
+    <table align="center" ;>
         <tr>
             <th>Полное название:</th>
             <td>Королевство Denmark</td>
@@ -28,50 +28,50 @@
             <td>43 094 км2</td>
         </tr>
         <tr>
-        <th>Столица:</th>
-        <td>Копенгаген</td>
-    </tr>
-    <tr>
-        <th>Главные города:</th>
-        <td>Копенгаген, Орхус, Оденсе, Ольборг</td>
-    </tr>
-    <tr>
-        <th>Глава государства:</th>
-        <td>Маргрете II</td>
-    </tr>
-      <tr>
-    <th>Глава правительства:</th>
-        <td>Метте Фредериксен</td>
-    </tr>
-    <tr>   
-    <th>Государственный строй:</th>
-        <td>Kонституционная монархия</td>
-    </tr> 
-    <tr>  
-    <th>Денежная единица:</th>
-        <td>Датская крона</td>
-    </tr>  
-    <tr>
-        <th>Численность населения:</th>
-        <td>5 811 413 чел.</td>
-    </tr>
-    <tr>    
-    <th>Естественный прирост:</th>
-        <td>0,4%</td>
-    </tr>
-    <tr>   
-    <th>Основные религии:</th>
-        <td>лютеранство</td>
-    </tr> 
-    <tr>    
-    <th>Неграмотность:</th>
-        <td>2%</td>
-    </tr>
-    <tr>    
-    <th>ВВП:</th>
-        <td>56 444 долл.</td>
-    </tr>
-       
+            <th>Столица:</th>
+            <td>Копенгаген</td>
+        </tr>
+        <tr>
+            <th>Главные города:</th>
+            <td>Копенгаген, Орхус, Оденсе, Ольборг</td>
+        </tr>
+        <tr>
+            <th>Глава государства:</th>
+            <td>Маргрете II</td>
+        </tr>
+        <tr>
+            <th>Глава правительства:</th>
+            <td>Метте Фредериксен</td>
+        </tr>
+        <tr>
+            <th>Государственный строй:</th>
+            <td>Kонституционная монархия</td>
+        </tr>
+        <tr>
+            <th>Денежная единица:</th>
+            <td>Датская крона</td>
+        </tr>
+        <tr>
+            <th>Численность населения:</th>
+            <td>5 811 413 чел.</td>
+        </tr>
+        <tr>
+            <th>Естественный прирост:</th>
+            <td>0,4%</td>
+        </tr>
+        <tr>
+            <th>Основные религии:</th>
+            <td>лютеранство</td>
+        </tr>
+        <tr>
+            <th>Неграмотность:</th>
+            <td>2%</td>
+        </tr>
+        <tr>
+            <th>ВВП:</th>
+            <td>56 444 долл.</td>
+        </tr>
+
     </table>
 
     <h3>ПОТОМКИ ВИКИНГОВ </h3>
@@ -80,8 +80,8 @@
         плотность населения — свыше 120 чел./км2 , самая высокая — в крупных городах: Копенгагене
     </p>
     <figure>
- <img style="height: 300px;" src="images/denmark/vikings.jpeg" alt="photo">
-</figure>
+        <img style="height: 300px;" src="images/denmark/vikings.jpeg" alt="photo">
+    </figure>
     <h3>ИСТОРИЯ </h3>
     <p>
         Первые люди, жившие на территории современной Дании около 12 тыс. лет тому назад, занимались рыболовством и охотой, и лишь спустя века распространилось земледелие и скотоводство. Примерно за 1000 лет до н. э. на датских равнинах обосновались германские,
@@ -89,11 +89,11 @@
         персональную унию со Швецией и Норвегией, стала ведущей державой Северной Европы. В 1536 г., после гражданской войны, страна перешла на новую веру — лютеранство. На протяжении XVI—XIX вв. Denmark теряла былое могущество, а в 1849 г. стала конституционной
         монархией. В годы I мировой войны Denmark придерживалась нейтралитета, а во время II мировой пережила нацистскую оккупацию. После войны страна стала членом ООН, НАТО и ЕС.
     </p>
-    
-   
+
+
     <figure>
         <img style="height: 300px;" src="images/denmark/denmark01.jpg" alt="photo">
-       </figure>
+    </figure>
 
     <h3>ЭКОНОМИКА </h3>
     <p>
@@ -105,7 +105,7 @@
     </p>
     <figure>
         <img style="height: 300px;" src="images/denmark/denmarkekonomik.png" alt="photo">
-       </figure>
+    </figure>
 
     <h3>МОСТ МЕЖДУ СЕВЕРНОЙ И ЦЕНТРАЛЬНОЙ ЕВРОПОЙ </h3>
     <p>
@@ -116,7 +116,7 @@
     </p>
     <figure>
         <img style="height: 400px;" src="images/denmark/denmark1.jpg" alt="photo">
-       </figure>
+    </figure>
     <h3>ТУРИЗМ </h3>
     <p>
         Больше всего туристов привлекает крупнейший остров страны — Зеландия, лежащий на оживлённом морском пути из Балтийского моря в Северное. На его восточном побережье расположена столица Дании — Копенгаген. Одна из главных достопримечательное- ' ' тей города
@@ -135,16 +135,16 @@
     </p>
     <figure>
         <img style="height: 300px;" src="images/denmark/denmark03.jpg" alt="photo">
-       </figure>
+    </figure>
 
     <h3>СТРУКТУРА ЗЕМЛЕПОЛЬЗОВАНИЯ В ДАНИИ</h3>
     <p>
         Атлантике Гренландия, а также Фарерские острова (Норвежское море). Обе территории — автономны, а Фарерские острова с населением около 50 тыс. чел. имеют даже своё правительство, парламент и денежную единицу — фарерскую крону. Основное занятие местных
         жителей — рыболовство. Гренландия по площади более чем в 50 раз превосходит Данию, а её население (около 59 тыс. чел.) состоит из иннуитов (эскимосов), гренландцев и датчан.
     </p>
- <footer align="right">
-    &copy; Copyright Всі права захищені 2019-2021
- </footer>
+    <footer>
+        <p class="text-center">Copyright © Econom Tour 2021! Всe права захищены</p>
+    </footer>
 </body>
 
 </html>
