--- a/econom-tour-2021/egypt2.html
+++ b/econom-tour-2021/egypt2.html
@@ -147,9 +147,7 @@
         </figure>
     </section>
     <footer>
-        <p>
-            Copyright © Egypt2! Всe права захищены
-        </p>
+        <p class="text-center">Copyright © Econom Tour 2021! Всe права захищены</p>
     </footer>
 </body>
 
