--- a/econom-tour-2021/italy.html
+++ b/econom-tour-2021/italy.html
@@ -342,9 +342,7 @@
         </p>
     </section>
     <footer>
-        <p>
-            Copyright © Egypt2! Всe права захищены
-        </p>
+        <p class="text-center">Copyright © Econom Tour 2021! Всe права захищены</p>
     </footer>
 
 </body>
