--- a/econom-tour-2021/norway.html
+++ b/econom-tour-2021/norway.html
@@ -120,6 +120,9 @@
             </p>
         </section>
     </article>
+    <footer>
+        <p class="text-center">Copyright © Econom Tour 2021! Всe права захищены</p>
+    </footer>
 </body>
 
 </html>
