Добвлено сторіки: контакти, країни,заявка, головна

--- a/econom-tour-2021/index.html
+++ b/econom-tour-2021/index.html
@@ -10,77 +10,14 @@
 </head>
 
 <body>
-    <header id="mainheader">
+    <header class="mainheader">
         <h1>ЕКОНОМ ТУР 2021</h1>
     </header>
-    <nav id="nav" link="black">
-        <article>
-            <h3>Страници стран:</h3>
-            <ul type="disc" id="nav-color">
-                <li><a href="argentina.html">Аргентина</a></li>
-                <li><a href="bulgaria.html">Болгария</a></li>
-                <li><a href="britany.html">Великобритания</a></li>
-                <li><a href="germany.html">Германия</a></li>
-                <li><a href="greece.html">Греция</a></li>
-                <li><a href="denmark.html">Дания</a></li>
-                <li><a href="egypt2.html">Египет</a></li>
-                <li><a href="italy.html">Италия</a></li>
-                <li><a href="canada.html">Канада</a></li>
-                <li><a href="norway.html">Норвегия</a></li>
-                <li><a href="usa.html">США</a></li>
-                <li><a href="france.html">Франция</a></li>
-                <li><a href="japan.html">Япония</a></li>
-            </ul>
-        </article>
-        <article>
-            <h3>Контакты:</h3>
-            <table>
-                <tr>
-                    <th>E-mail:</th>
-                    <td> Economtour2021@gmail.com</td>
-                </tr>
-                <tr>
-                    <th>Тел.:</th>
-                    <td>+380986541359</td>
-                </tr>
-                <tr>
-                    <th>Адрес:</th>
-                    <td>м.Кам'янець-Подільський, вул.Огієнка 82</td>
-                </tr>
-            </table>
-        </article>
-        <article id="formoftour">
-            <div id="request">Заявка на тур</div>
-            <div id="dopinfo">Заполните форму, что бы мы могли отправить вам СМС с заявкой на тур</div>
-            <div>
-                <form id="form">
-
-                    <input name="firstName" type="text" required="required" placeholder="Ваше ФИО*" />
-                    <input name="phone" type="tel" required="required" placeholder="Телефон">
-                    <input name="emailAddress" type="email" required="required" placeholder="Е-mail" />
-                    <select required>
-                            <option>Аргентина</option>          
-                            <option>Болгария</option>
-                            <option>Великобритания</option>
-                            <option>Германия</option>
-                            <option>Греция</option>
-                            <option>Дания</option>
-                            <option>Египет</option>
-                            <option>Италия</option>
-                            <option>Канада</option>
-                            <option>Норвегия</option>
-                            <option>США</option>
-                            <option>Франция</option>
-                            <option>Япония</option>
-                            <option selected disabled hidden>Выберете страну</option>
-                    </select>
-                    <div>
-                        <button type="submit">Отправить</button>
-                    </div>
-                </form>
-
-            </div>
-        </article>
+    <nav id="nav">
+        <a href="index.html">Главная</a>
+        <a href="countries.html">Страны</a>
+        <a href="contact.html">Контакты</a>
+        <a href="forma.html"><span class="nav-zay">Заявка на тур</span></a>
     </nav>
     <article class="inform">
         <section>
@@ -141,7 +78,7 @@
 
     <link type="text/css" rel="stylesheet" href="https://www.meteoprog.ua/css/winformer.min.css?id=100">
 
-    <div class="meteoprog-informer" style="width: 270px" data-params='{"city_ids":"2533,2650,2696","domain":"https://www.meteoprog.ua","id":"6086758c2bac921c528b458b","lang":"ru"}'>
+    <div class="meteoprog-informer" style="width: 14%" data-params='{"city_ids":"2533,2650,2696","domain":"https://www.meteoprog.ua","id":"6086758c2bac921c528b458b","lang":"ru"}'>
 
 
         <a title="Погода в городе Киев" target="_blank" href="https://www.meteoprog.ua/weather/Kyiv">
