Додано картинки прапорів країн

--- a/econom-tour-2021/countries.html
+++ b/econom-tour-2021/countries.html
@@ -27,7 +27,7 @@
         <a href="contact.html">Контакты</a>
         <a href="forma.html"><span class="nav-zay">Заявка на тур</span></a>
     </nav>
-    <article>
+    <article class="count-list">
         <figure class="sign">
             <a href="argentina.html"><img src="images/argentina/флаг аргентины.png" alt="флаг Аргентины" width="150px" height="100px" title="Нажми что бы узнать больше"></a>
             <figcaption>Аргентина</figcaption>
