--- a/econom-tour-2021/countries.html
+++ b/econom-tour-2021/countries.html
@@ -34,51 +34,51 @@
         </figure>
         <figure class="sign">
             <a href="bulgaria.html"><img src="images/bulgaria/Флаг Болгарии.png" alt="Флаг Болгарии" width="150px" height="100px" title="Нажми что бы узнать больше"></a>
-            <figcaption>Аргентина</figcaption>
+            <figcaption>Болгария</figcaption>
         </figure>
         <figure class="sign">
             <a href="britany.html"><img src="images/britany/Флаг великобритании.png" alt="флаг Великобритании" width="150px" height="100px" title="Нажми что бы узнать больше"></a>
-            <figcaption>Аргентина</figcaption>
+            <figcaption>Великобритания</figcaption>
         </figure>
         <figure class="sign">
             <a href="germany.html"><img src="images/germany/Флаг Германии.jpg" alt="флаг Германии" width="150px" height="100px" title="Нажми что бы узнать больше"></a>
-            <figcaption>Аргентина</figcaption>
+            <figcaption>Германия</figcaption>
         </figure>
         <figure class="sign">
             <a href="greece.html"><img src="images/greece/ФлагГреции.png" alt="флаг Греции" width="150px" height="100px" title="Нажми что бы узнать больше"></a>
-            <figcaption>Аргентина</figcaption>
+            <figcaption>Греция</figcaption>
         </figure>
         <figure class="sign">
             <a href="denmark.html"><img src="images/denmark/флаг дании.png" alt="флаг Дании" width="150px" height="100px" title="Нажми что бы узнать больше"></a>
-            <figcaption>Аргентина</figcaption>
+            <figcaption>Дания</figcaption>
         </figure>
         <figure class="sign">
             <a href="egypt2.html"><img src="images/egypt/флаг Египта.png" alt="флаг Египта" width="150px" height="100px" title="Нажми что бы узнать больше"></a>
-            <figcaption>Аргентина</figcaption>
+            <figcaption>Египет</figcaption>
         </figure>
         <figure class="sign">
             <a href="italy.html"><img src="images/italy/Флаг италии.png" alt="флаг Италии" width="150px" height="100px" title="Нажми что бы узнать больше"></a>
-            <figcaption>Аргентина</figcaption>
+            <figcaption>Италия</figcaption>
         </figure>
         <figure class="sign">
             <a href="canada.html"><img src="images/canada/Флаг канады.png" alt="флаг Канады" width="150px" height="100px" title="Нажми что бы узнать больше"></a>
-            <figcaption>Аргентина</figcaption>
+            <figcaption>Канада</figcaption>
         </figure>
         <figure class="sign">
             <a href="norway.html"><img src="images/norway/флаг норвегии.png" alt="флаг Норвегии" width="150px" height="100px" title="Нажми что бы узнать больше"></a>
-            <figcaption>Аргентина</figcaption>
+            <figcaption>Норвегия</figcaption>
         </figure>
         <figure class="sign">
             <a href="usa.html"><img src="images/usa/Flag_of_USA.svg.png" alt="флаг США" width="150px" height="100px" title="Нажми что бы узнать больше"></a>
-            <figcaption>Аргентина</figcaption>
+            <figcaption>США</figcaption>
         </figure>
         <figure class="sign">
             <a href="france.html"><img src="images/france/флаг франции.png" alt="флаг Франции" width="150px" height="100px" title="Нажми что бы узнать больше"></a>
-            <figcaption>Аргентина</figcaption>
+            <figcaption>Франция</figcaption>
         </figure>
         <figure class="sign">
             <a href="japan.html"><img src="images/japan/флаг японии.png" alt="флаг Японии" width="150px" height="100px" title="Нажми что бы узнать больше"></a>
-            <figcaption>Аргентина</figcaption>
+            <figcaption>Япония</figcaption>
         </figure>
     </article>
 
