--- a/econom-tour-2021/countries.html
+++ b/econom-tour-2021/countries.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-    <header class="mainheader">
+    <header class="mainheader" style="background-image: url(images/header/header.jpg); background-size: 100%; height: 150px; background-repeat: no-repeat;">
         <h1>ЕКОНОМ ТУР 2021</h1>
     </header>
     <nav id="nav">
