Створена структура за допомогою бутстрапа

--- a/econom-tour-2021/contact.html
+++ b/econom-tour-2021/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
@@ -7,38 +7,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/bootstrap.css">
 </head>
 
 <body>
-    <header class="mainheader" style="background-image: url(images/header/header.jpg); background-size: 100%; height: 150px; background-repeat: no-repeat;">
-        <h1>ЕКОНОМ ТУР 2021</h1>
-    </header>
-    <nav id="nav">
-        <a href="index.html">Главная</a>
-        <a href="countries.html">Страны</a>
-        <a href="contact.html">Контакты</a>
-        <a href="forma.html"><span class="nav-zay">Заявка на тур</span></a>
-    </nav>
-    <article>
-        <h3>Контакты:</h3>
-        <table>
-            <tr>
-                <th>E-mail:</th>
-                <td> Economtour2021@gmail.com</td>
-            </tr>
-            <tr>
-                <th>Тел.:</th>
-                <td>+380986541359</td>
-            </tr>
-            <tr>
-                <th>Адрес:</th>
-                <td>м.Кам'янець-Подільський, вул.Огієнка 82</td>
-            </tr>
-        </table>
-    </article>
-    <footer>
-        <p class="text-center">Copyright © Econom Tour 2021! Всe права захищены</p>
-    </footer>
+    <div class="container-fluite">
+        <div class="jumbotron">
+            <header class="mainheader" style="background-image: url(images/header/header.jpg); background-size: 100%; height: 150px; background-repeat: no-repeat;">
+                <h1>ЕКОНОМ ТУР 2021</h1>
+            </header>
+            <nav id="nav">
+                <a href="index.html">Главная</a>
+                <a href="countries.html">Страны</a>
+                <a href="contact.html">Контакты</a>
+                <a href="forma.html"><span class="nav-zay">Заявка на тур</span></a>
+            </nav>
+            <div class="row">
+                <div class="col-xs-offset-5 col-md-2">
+                    <h3>Контакты:</h3>
+                    <table>
+                        <tr>
+                            <th>E-mail:</th>
+                            <td> Economtour2021@gmail.com</td>
+                        </tr>
+                        <tr>
+                            <th>Тел.:</th>
+                            <td>+380986541359</td>
+                        </tr>
+                        <tr>
+                            <th>Адрес:</th>
+                            <td>м.Кам'янець-Подільський, вул.Огієнка 82</td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+            <footer>
+                <p class="text-center">Copyright © Econom Tour 2021! Всe права захищены</p>
+            </footer>
+        </div>
+    </div>
 </body>
 
 </html>
