--- a/econom-tour-2021/countries.html
+++ b/econom-tour-2021/countries.html
@@ -6,85 +6,85 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Туры и путишествия от компании Супер Турист</title>
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.3/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/bootstrap.css">
 
 </head>
 
 <body>
-    <header class="mainheader" style="background-image: url(images/header/header.jpg); background-size: 100%; height: 150px; background-repeat: no-repeat;">
-        <h1>ЕКОНОМ ТУР 2021</h1>
-    </header>
-    <nav id="nav">
-        <a href="index.html">Главная</a>
-        <a href="countries.html">Страны</a>
-        <a href="contact.html">Контакты</a>
-        <a href="forma.html"><span class="nav-zay">Заявка на тур</span></a>
-    </nav>
-    <article class="count-list">
-        <figure class="sign">
-            <a href="argentina.html"><img src="images/argentina/флаг аргентины.png" alt="флаг Аргентины" width="150px" height="100px" title="Нажми что бы узнать больше"></a>
-            <figcaption>Аргентина</figcaption>
-        </figure>
-        <figure class="sign">
-            <a href="bulgaria.html"><img src="images/bulgaria/Флаг Болгарии.png" alt="Флаг Болгарии" width="150px" height="100px" title="Нажми что бы узнать больше"></a>
-            <figcaption>Болгария</figcaption>
-        </figure>
-        <figure class="sign">
-            <a href="britany.html"><img src="images/britany/Флаг великобритании.png" alt="флаг Великобритании" width="150px" height="100px" title="Нажми что бы узнать больше"></a>
-            <figcaption>Великобритания</figcaption>
-        </figure>
-        <figure class="sign">
-            <a href="germany.html"><img src="images/germany/Флаг Германии.jpg" alt="флаг Германии" width="150px" height="100px" title="Нажми что бы узнать больше"></a>
-            <figcaption>Германия</figcaption>
-        </figure>
-        <figure class="sign">
-            <a href="greece.html"><img src="images/greece/ФлагГреции.png" alt="флаг Греции" width="150px" height="100px" title="Нажми что бы узнать больше"></a>
-            <figcaption>Греция</figcaption>
-        </figure>
-        <figure class="sign">
-            <a href="denmark.html"><img src="images/denmark/флаг дании.png" alt="флаг Дании" width="150px" height="100px" title="Нажми что бы узнать больше"></a>
-            <figcaption>Дания</figcaption>
-        </figure>
-        <figure class="sign">
-            <a href="egypt2.html"><img src="images/egypt/флаг Египта.png" alt="флаг Египта" width="150px" height="100px" title="Нажми что бы узнать больше"></a>
-            <figcaption>Египет</figcaption>
-        </figure>
-        <figure class="sign">
-            <a href="italy.html"><img src="images/italy/Флаг италии.png" alt="флаг Италии" width="150px" height="100px" title="Нажми что бы узнать больше"></a>
-            <figcaption>Италия</figcaption>
-        </figure>
-        <figure class="sign">
-            <a href="canada.html"><img src="images/canada/Флаг канады.png" alt="флаг Канады" width="150px" height="100px" title="Нажми что бы узнать больше"></a>
-            <figcaption>Канада</figcaption>
-        </figure>
-        <figure class="sign">
-            <a href="norway.html"><img src="images/norway/флаг норвегии.png" alt="флаг Норвегии" width="150px" height="100px" title="Нажми что бы узнать больше"></a>
-            <figcaption>Норвегия</figcaption>
-        </figure>
-        <figure class="sign">
-            <a href="usa.html"><img src="images/usa/Flag_of_USA.svg.png" alt="флаг США" width="150px" height="100px" title="Нажми что бы узнать больше"></a>
-            <figcaption>США</figcaption>
-        </figure>
-        <figure class="sign">
-            <a href="france.html"><img src="images/france/флаг франции.png" alt="флаг Франции" width="150px" height="100px" title="Нажми что бы узнать больше"></a>
-            <figcaption>Франция</figcaption>
-        </figure>
-        <figure class="sign">
-            <a href="japan.html"><img src="images/japan/флаг японии.png" alt="флаг Японии" width="150px" height="100px" title="Нажми что бы узнать больше"></a>
-            <figcaption>Япония</figcaption>
-        </figure>
-    </article>
+    <div class="container-fluite">
+        <div class="jumbotron">
+            <header class=" mainheader" style="background-image: url(images/header/header.jpg); background-size: 100%; height: 150px; background-repeat: no-repeat;">
+                <h1>ЕКОНОМ ТУР 2021</h1>
+            </header>
+            <nav id="nav">
+                <a href="index.html">Главная</a>
+                <a href="countries.html">Страны</a>
+                <a href="contact.html">Контакты</a>
+                <a href="forma.html"><span class="nav-zay">Заявка на тур</span></a>
+            </nav>
+            <div class="count-list">
+                <div class="row">
+                    <figure class="col-xs-6 col-md-3 sign">
+                        <a href="argentina.html"><img src="images/argentina/флаг аргентины.png" alt="флаг Аргентины" width="150px" height="100px" title="Нажми что бы узнать больше"></a>
+                        <figcaption>Аргентина</figcaption>
+                    </figure>
+                    <figure class="col-xs-6 col-md-3 sign">
+                        <a href="bulgaria.html"><img src="images/bulgaria/Флаг Болгарии.png" alt="Флаг Болгарии" width="150px" height="100px" title="Нажми что бы узнать больше"></a>
+                        <figcaption>Болгария</figcaption>
+                    </figure>
+                    <figure class="col-xs-6 col-md-3 sign">
+                        <a href="britany.html"><img src="images/britany/Флаг великобритании.png" alt="флаг Великобритании" width="150px" height="100px" title="Нажми что бы узнать больше"></a>
+                        <figcaption>Великобритания</figcaption>
+                    </figure>
+                    <figure class="col-xs-6 col-md-3 sign">
+                        <a href="germany.html"><img src="images/germany/Флаг Германии.jpg" alt="флаг Германии" width="150px" height="100px" title="Нажми что бы узнать больше"></a>
+                        <figcaption>Германия</figcaption>
+                    </figure>
+                    <figure class="col-xs-6 col-md-3 sign">
+                        <a href="greece.html"><img src="images/greece/ФлагГреции.png" alt="флаг Греции" width="150px" height="100px" title="Нажми что бы узнать больше"></a>
+                        <figcaption>Греция</figcaption>
+                    </figure>
+                    <figure class="col-xs-6 col-md-3 sign">
+                        <a href="denmark.html"><img src="images/denmark/флаг дании.png" alt="флаг Дании" width="150px" height="100px" title="Нажми что бы узнать больше"></a>
+                        <figcaption>Дания</figcaption>
+                    </figure>
+                    <figure class="col-xs-6 col-md-3 sign">
+                        <a href="egypt2.html"><img src="images/egypt/флаг Египта.png" alt="флаг Египта" width="150px" height="100px" title="Нажми что бы узнать больше"></a>
+                        <figcaption>Египет</figcaption>
+                    </figure>
+                    <figure class="col-xs-6 col-md-3 sign">
+                        <a href="italy.html"><img src="images/italy/Флаг италии.png" alt="флаг Италии" width="150px" height="100px" title="Нажми что бы узнать больше"></a>
+                        <figcaption>Италия</figcaption>
+                    </figure>
+                    <figure class="col-xs-6 col-md-3 sign">
+                        <a href="canada.html"><img src="images/canada/Флаг канады.png" alt="флаг Канады" width="150px" height="100px" title="Нажми что бы узнать больше"></a>
+                        <figcaption>Канада</figcaption>
+                    </figure>
+                    <figure class="col-xs-6 col-md-3 sign">
+                        <a href="norway.html"><img src="images/norway/флаг норвегии.png" alt="флаг Норвегии" width="150px" height="100px" title="Нажми что бы узнать больше"></a>
+                        <figcaption>Норвегия</figcaption>
+                    </figure>
+                    <figure class="col-xs-6 col-md-3 sign">
+                        <a href="usa.html"><img src="images/usa/Flag_of_USA.svg.png" alt="флаг США" width="150px" height="100px" title="Нажми что бы узнать больше"></a>
+                        <figcaption>США</figcaption>
+                    </figure>
+                    <figure class="col-xs-6 col-md-3 sign">
+                        <a href="france.html"><img src="images/france/флаг франции.png" alt="флаг Франции" width="150px" height="100px" title="Нажми что бы узнать больше"></a>
+                        <figcaption>Франция</figcaption>
+                    </figure>
+                    <figure class="col-xs-12 col-md-12 sign">
+                        <a href="japan.html"><img src="images/japan/флаг японии.png" alt="флаг Японии" width="150px" height="100px" title="Нажми что бы узнать больше"></a>
+                        <figcaption>Япония</figcaption>
+                    </figure>
+                </div>
+            </div>
 
-    <footer>
-        <p class="text-center">Copyright © Econom Tour 2021! Всe права захищены</p>
-    </footer>
+            <footer>
+                <p class="text-center">Copyright © Econom Tour 2021! Всe права захищены</p>
+            </footer>
+        </div>
+    </div>
 </body>
 
 </html>
