--- a/econom-tour-2021/forma.html
+++ b/econom-tour-2021/forma.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
@@ -7,53 +7,60 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/bootstrap.css">
 </head>
 
 <body>
-    <header class="mainheader" style="background-image: url(images/header/header.jpg); background-size: 100%; height: 150px; background-repeat: no-repeat;">
-        <h1>ЕКОНОМ ТУР 2021</h1>
-    </header>
-    <nav id="nav">
-        <a href="index.html">Главная</a>
-        <a href="countries.html">Страны</a>
-        <a href="contact.html">Контакты</a>
-        <a href="forma.html"><span class="nav-zay">Заявка на тур</span></a>
-    </nav>
-    <article id="formoftour">
-        <div id="request">Заявка на тур</div>
-        <div id="dopinfo">Заполните форму, что бы мы могли отправить вам СМС с заявкой на тур</div>
-        <div>
-            <form id="form">
-
-                <input name="firstName" type="text" required="required" placeholder="Ваше ФИО*" />
-                <input name="phone" type="tel" required="required" placeholder="Телефон">
-                <input name="emailAddress" type="email" required="required" placeholder="Е-mail" />
-                <select required>
-                            <option>Аргентина</option>          
-                            <option>Болгария</option>
-                            <option>Великобритания</option>
-                            <option>Германия</option>
-                            <option>Греция</option>
-                            <option>Дания</option>
-                            <option>Египет</option>
-                            <option>Италия</option>
-                            <option>Канада</option>
-                            <option>Норвегия</option>
-                            <option>США</option>
-                            <option>Франция</option>
-                            <option>Япония</option>
-                            <option selected disabled hidden>Выберете страну</option>
-                    </select>
-                <div>
-                    <button type="submit">Отправить</button>
+    <div class="container-fluite">
+        <div class="jumbotron">
+            <header class=" mainheader" style="background-image: url(images/header/header.jpg); background-size: 100%; height: 150px; background-repeat: no-repeat;">
+                <h1>ЕКОНОМ ТУР 2021</h1>
+            </header>
+            <nav id="nav">
+                <a href="index.html">Главная</a>
+                <a href="countries.html">Страны</a>
+                <a href="contact.html">Контакты</a>
+                <a href="forma.html"><span class="nav-zay">Заявка на тур</span></a>
+            </nav>
+            <div id="formoftour" class="row">
+                <div class="col-xs-3">
+                    <div id="request">Заявка на тур</div>
+                    <div id="dopinfo">Заполните форму, что бы мы могли отправить вам СМС с заявкой на тур</div>
+                    <div>
+                        <form id="form">
+                            <div style="padding-left: 10%;">
+                                <input name="firstName" type="text" required="required" placeholder="Ваше ФИО*" />
+                                <input name="phone" type="tel" required="required" placeholder="Телефон">
+                                <input name="emailAddress" type="email" required="required" placeholder="Е-mail" />
+                                <select required>
+                                <option>Аргентина</option>          
+                                <option>Болгария</option>
+                                <option>Великобритания</option>
+                                <option>Германия</option>
+                                <option>Греция</option>
+                                <option>Дания</option>
+                                <option>Египет</option>
+                                <option>Италия</option>
+                                <option>Канада</option>
+                                <option>Норвегия</option>
+                                <option>США</option>
+                                <option>Франция</option>
+                                <option>Япония</option>
+                                <option selected disabled hidden>Выберете страну</option>
+                                </select>
+                                <div>
+                                    <button class="btn btn-success" type="submit">Отправить</button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
                 </div>
-            </form>
-
+            </div>
+            <footer>
+                <p class="text-center">Copyright © Econom Tour 2021! Всe права захищены</p>
+            </footer>
         </div>
-    </article>
-    <footer>
-        <p class="text-center">Copyright © Econom Tour 2021! Всe права захищены</p>
-    </footer>
+    </div>
 </body>
 
 </html>
