--- a/html51/lesson23/index.html
+++ b/html51/lesson23/index.html
@@ -19,10 +19,10 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-xs-5 col-sm-4">
+            <div class="col-xs-7 col-sm-6 col-md-5 col-lg-4">
                 <img src="images/Album.gif" alt="Phonograph record">
             </div>
-            <div class="col-xs-7 col-sm-8 ">
+            <div class="col-xs-5 col-sm-6 col-md-7 col-lg-8">
                 <h2>Album Title Artist</h2>
                 <p>
                     Eu velit ea consectetur est sint duis irure. Exercitation sit nostrud ullamco deserunt officia fugiat pariatur ea non cupidatat adipisicing. Tempor do commodo veniam dolor ut amet aliquip proident ullamco deserunt reprehenderit incididunt cupidatat pariatur.
