--- a/html51/lesson26/index.html
+++ b/html51/lesson26/index.html
@@ -36,18 +36,21 @@
                     </div>
                     <div class="form-group">
                         <label for="name" class="control-label col-md-5">Вашое имя и фамилия</label>
-                        <div class="col-sm-7 col-md-6">
-                            <input type="text" name="name" id="name" class="form-control" placeholder="Иван Иванов"> </div>
+                        <div class="col-md-offset-1 col-sm-10 col-md-6 input-group">
+                            <input type="text" name="name" id="name" class="form-control" placeholder="Иван Иванов">
+                            <span class="input-group-addon"><i class="glyphicon glyphicon-user" ></i></span>
+                        </div>
                     </div>
                     <div class="form-group">
                         <label for="name" class="control-label col-md-5">Компания / учебное завидение</label>
                         <div class="col-ex-2 col-md-6">
                             <input type="text" name="institution" id="institution" class="form-control"> </div>
                     </div>
-                    <div class="form-group">
+                    <div class="form-group has-feedback">
                         <label for="inputEmail3" class="col-sm-2 col-md-4 control-label">Email</label>
-                        <div class="col-md-offset-1 col-sm-10 col-md-6">
+                        <div class="col-md-offset-1 col-sm-10 col-md-6 input-group">
                             <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+                            <span class="input-group-addon"><i class="glyphicon glyphicon-envelope" ></i></span>
                         </div>
                     </div>
                     <div class="form-group">
@@ -56,14 +59,15 @@
                             <input type="text" name="specialty" id="specialty" class="form-control"> </div>
                     </div>
                     <div class="form-group">
-                        <label for="name" class="control-label col-md-5">Городы</label>
+                        <label for="name" class="control-label col-md-5">Город</label>
                         <div class="col-md-6">
                             <input type="text" name="Town" id="Town" class="form-control"> </div>
                     </div>
                     <div class="form-group">
                         <label for="name" class="control-label col-md-12">Как нам сделать конференцию более полезной и интересной?</label>
-                        <div class="col-md-offset-3 col-md-8">
+                        <div class="col-md-offset-1 col-sm-10 col-md-6 input-group">
                             <textarea class=" form-control" rows="4"></textarea>
+                            <span class="input-group-addon"><i class="glyphicon glyphicon-comment" ></i></span>
                         </div>
                     </div>
                     <div class="form-group">
